--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
                 <img src="images/logo.png" alt="PowerFuel Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="https://ya.ru/">Products</a></li>
-                <li><a href="https://ya.ru/">Solutions</a></li>
-                <li><a href="https://ya.ru/">Community</a></li>
-                <li><a href="https://ya.ru/">Resources</a></li>
-                <li><a href="https://ya.ru/">Pricing</a></li>
-                <li><a href="https://ya.ru/">Contact</a></li>
+                <li><a href="order.html">Заказать доставку!</a></li>
+                <li><a href="community.html">Сообщество</a></li>
+                <li><a href="https://ya.ru/">Источники</a></li>
+                <li><a href="https://ya.ru/">Сотрудничество</a></li>
+                <li><a href="https://ya.ru/">Контакты</a></li>
             </ul>
             <div class="auth-buttons">
-                <button id="signIn">Sign In</button>
-                <button id="register" onclick="location.href='register.html'">Register</button>
+                <button id="signIn">Вход</button>
+                <button id="register" onclick="location.href='register.html'">Регистрация</button>
 
             </div>
         </nav>
@@ -46,7 +45,7 @@
                     <img src="images/blackberry.png" alt="Ежевика">
                     <h3>Ежевика</h3>
                     <p>Глубокий вкус лесной ягоды, заряжающий бодростью.</p>
-                </div>
+                </div>                
                 <div class="flavor-card">
                     <img src="images/pineapple.png" alt="Ананас">
                     <h3>Ананас</h3>
