--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                 </div>
             
 
-                <button type="submit">Register</button>
+                <button type="submit">Зарегистрироваться</button>
             </form>
 
         </section>
