Валидация для доставки

--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
         <p>© 2024 PowerFuel Energy Drink</p>
     </footer>
 
-    <script src="validation.js"></script>
+    <script src="validation1.js"></script>
 
 </body>
 </html>
